section 4 also compliteed

--- a/index.html
+++ b/index.html
@@ -863,6 +863,142 @@
                 </div>
             </div>
         </section>
+
+        <!-- CAT Exam FAQ Section -->
+        <section class="faq-section" id="pricing">
+            <div class="faq-header">
+                <div class="faq-badge">
+                    <i class="fas fa-question-circle"></i>
+                    <span>Frequently Asked Questions</span>
+                </div>
+                <h2 class="faq-title">CAT Exam FAQ</h2>
+                <p class="faq-subtitle">Get answers to the most common questions about CAT preparation and exam strategy from our experts.</p>
+            </div>
+
+            <div class="faq-container">
+                <div class="faq-item" data-faq="1">
+                    <div class="faq-question">
+                        <div class="question-icon error">
+                            <i class="fas fa-exclamation"></i>
+                        </div>
+                        <h3 class="question-text">How can I crack CAT exam easily?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>There's no "easy" way to crack CAT, but a systematic approach helps: Start with understanding the exam pattern, build strong fundamentals in all three sections (VARC, DILR, QA), practice regularly with mock tests, analyze your performance, work on time management, and maintain consistency. Focus on accuracy over speed initially, then gradually build pace.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item" data-faq="2">
+                    <div class="faq-question">
+                        <div class="question-icon warning">
+                            <i class="fas fa-book"></i>
+                        </div>
+                        <h3 class="question-text">What is the best way to improve CAT reading comprehension?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>To improve RC: Read diverse content daily (newspapers, magazines, journals), practice active reading by summarizing paragraphs, work on increasing reading speed while maintaining comprehension, learn to identify main ideas and tone, practice different question types, and time yourself while solving RC passages. Focus on understanding the passage structure and author's perspective.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item" data-faq="3">
+                    <div class="faq-question">
+                        <div class="question-icon success">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <h3 class="question-text">How many hours should I study daily for CAT?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>For working professionals: 3-4 hours daily. For students: 6-8 hours daily. Quality matters more than quantity. Focus on productive study time with proper breaks. Include theory, practice, mock tests, and analysis in your daily routine. Maintain consistency rather than cramming. Adjust based on your strengths, weaknesses, and available time.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item" data-faq="4">
+                    <div class="faq-question">
+                        <div class="question-icon info">
+                            <i class="fas fa-calendar-alt"></i>
+                        </div>
+                        <h3 class="question-text">When should I start preparing for CAT?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Ideally, start 10-12 months before the exam. This gives you enough time to build strong fundamentals, practice extensively, and take multiple mock tests. If you're starting late, 6-8 months can work with intensive preparation. Early start allows for better concept building and stress-free preparation. Remember, it's never too early or too late to start!</p>
+                    </div>
+                </div>
+
+                <div class="faq-item active" data-faq="5">
+                    <div class="faq-question">
+                        <div class="question-icon primary">
+                            <i class="fas fa-target"></i>
+                        </div>
+                        <h3 class="question-text">How can I improve my accuracy in CAT exam?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-up"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Focus on solving questions correctly first, even if you solve fewer initially. Don't rush through questions. Read carefully, double-check your answers, and skip tricky ones if needed. Regular practice and thorough mock test analysis will naturally boost your accuracy over time.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item" data-faq="6">
+                    <div class="faq-question">
+                        <div class="question-icon secondary">
+                            <i class="fas fa-redo"></i>
+                        </div>
+                        <h3 class="question-text">How many times can I attempt the CAT exam?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>There's no limit on the number of CAT attempts. You can take the exam multiple times, but most top B-schools consider only your latest or best score. However, it's recommended to prepare thoroughly for each attempt rather than relying on multiple chances. Each attempt should be treated as your final one for best results.</p>
+                    </div>
+                </div>
+
+                <div class="faq-item" data-faq="7">
+                    <div class="faq-question">
+                        <div class="question-icon danger">
+                            <i class="fas fa-minus-circle"></i>
+                        </div>
+                        <h3 class="question-text">Does CAT have negative marking?</h3>
+                        <div class="toggle-icon">
+                            <i class="fas fa-chevron-down"></i>
+                        </div>
+                    </div>
+                    <div class="faq-answer">
+                        <p>Yes, CAT has negative marking. For every wrong answer, 1/3rd (0.33) marks are deducted. This is why accuracy is crucial. It's better to attempt questions you're confident about rather than guessing randomly. Develop a strategy to identify questions you can solve accurately and skip the ones you're unsure about.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- FAQ CTA Section -->
+            <div class="faq-cta-section">
+                <h3 class="faq-cta-title">Still Have Questions?</h3>
+                <p class="faq-cta-subtitle">Get personalized guidance from our CAT experts and start your journey to success.</p>
+                
+                <div class="faq-cta-buttons">
+                    <button class="faq-cta-btn primary">
+                        <i class="fas fa-user-tie"></i>
+                        Talk to Expert
+                    </button>
+                    <button class="faq-cta-btn secondary">
+                        <i class="fas fa-play-circle"></i>
+                        Book Free Demo
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Background Elements -->
