--- a/index.html
+++ b/index.html
@@ -1001,6 +1001,138 @@
         </section>
     </main>
 
+    <!-- Footer Section -->
+    <footer class="footer-section">
+        <div class="footer-content">
+            <!-- Footer Main -->
+            <div class="footer-main">
+                <!-- Brand Section -->
+                <div class="footer-brand">
+                    <div class="footer-logo">
+                        <img src="logo.png" alt="Rahul Sir Classes" class="footer-logo-img">
+                        <div class="brand-info">
+                            <h3 class="brand-name">RAHULSIR CLASSES</h3>
+                            <p class="brand-tagline">Empowering Students for a Brighter Tomorrow</p>
+                        </div>
+                    </div>
+                    
+                    <!-- App Download -->
+                    <div class="app-download">
+                        <p class="download-text">Download Our App</p>
+                        <div class="download-buttons">
+                            <a href="#" class="download-btn google-play">
+                                <img src="https://via.placeholder.com/150x45/000000/ffffff?text=Google+Play" alt="Get it on Google Play">
+                            </a>
+                            <a href="#" class="download-btn app-store">
+                                <img src="https://via.placeholder.com/150x45/000000/ffffff?text=App+Store" alt="Download on the App Store">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Footer Links -->
+                <div class="footer-links">
+                    <!-- Pages Column -->
+                    <div class="footer-column">
+                        <h4 class="column-title">Pages</h4>
+                        <ul class="footer-menu">
+                            <li><a href="#home" class="footer-link">Home</a></li>
+                            <li><a href="#about" class="footer-link">About Us</a></li>
+                            <li><a href="#contact" class="footer-link">Contact Us</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Legal Column -->
+                    <div class="footer-column">
+                        <h4 class="column-title">Legal and Policies</h4>
+                        <ul class="footer-menu">
+                            <li><a href="#privacy" class="footer-link">Privacy & Policy</a></li>
+                            <li><a href="#terms" class="footer-link">Terms and Conditions</a></li>
+                            <li><a href="#security" class="footer-link">Security</a></li>
+                        </ul>
+                    </div>
+
+                    <!-- Contact Column -->
+                    <div class="footer-column">
+                        <h4 class="column-title">Contact</h4>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <i class="fas fa-phone"></i>
+                                <a href="tel:9429691050" class="contact-link">9429691050</a>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-envelope"></i>
+                                <a href="mailto:admin@rahulsirclasses.in" class="contact-link">admin@rahulsirclasses.in</a>
+                            </div>
+                            <div class="contact-item">
+                                <i class="fas fa-life-ring"></i>
+                                <a href="#support" class="contact-link">Support Forum</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Social Media Column -->
+                    <div class="footer-column">
+                        <h4 class="column-title">Social Media</h4>
+                        <div class="social-links">
+                            <a href="#" class="social-link whatsapp" title="WhatsApp">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                            <a href="#" class="social-link linkedin" title="LinkedIn">
+                                <i class="fab fa-linkedin-in"></i>
+                            </a>
+                            <a href="#" class="social-link instagram" title="Instagram">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" class="social-link telegram" title="Telegram">
+                                <i class="fab fa-telegram-plane"></i>
+                            </a>
+                            <a href="#" class="social-link youtube" title="YouTube">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="#" class="social-link facebook" title="Facebook">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="#" class="social-link twitter" title="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Footer Bottom -->
+            <div class="footer-bottom">
+                <div class="footer-divider"></div>
+                <div class="footer-copyright">
+                    <p class="copyright-text">
+                        © 2025 Rahul Sir Classes. All Rights Reserved. 
+                        <span class="tagline">Empowering Students for a Brighter Tomorrow.</span>
+                    </p>
+                    <div class="footer-badges">
+                        <div class="badge-item">
+                            <i class="fas fa-shield-alt"></i>
+                            <span>Secure Learning</span>
+                        </div>
+                        <div class="badge-item">
+                            <i class="fas fa-award"></i>
+                            <span>Certified Excellence</span>
+                        </div>
+                        <div class="badge-item">
+                            <i class="fas fa-users"></i>
+                            <span>10,000+ Students</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Back to Top Button -->
+        <button class="back-to-top" id="backToTop">
+            <i class="fas fa-chevron-up"></i>
+        </button>
+    </footer>
+
     <!-- Background Elements -->
     <div class="bg-elements">
         <div class="bg-circle circle-1"></div>
